Change a page 404 and add a Baythium-Vector package to the project

--- a/src/_includes/_partials/app-footer.njk
+++ b/src/_includes/_partials/app-footer.njk
@@ -11,7 +11,7 @@
 
     <!-- Deck 1: Language Switcher -->
     <div class="language-switcher mb-4">
-      <span class="visible-xs">{{ translation[app.locale].language | capitalize }}:</span>
+      <span class="icon icon--globe visible-xs">{{ translation[app.locale].language | capitalize }}:</span>
 
       <a href="javascript:" class="language-switcher__link">
         {% for lang in app.languages %}
