--- a/src/styles/components/language-switcher.scss
+++ b/src/styles/components/language-switcher.scss
@@ -11,6 +11,10 @@
   align-items: center;
   justify-content: center;
 
+  span {
+    margin-right: $sm-indent;
+  }
+
   &__link {
     color: $white;
     text-decoration: none;
