--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -47,7 +47,7 @@
      * as much space as possible, ensuring footers are aligned to the bottom.
      */
     flex: 1 1 auto;
-    padding: $base-indent;
+    padding: $xl-indent;
     color: $black;
     border-bottom: 1px solid $gray-200;
   }
