--- a/src/about.njk
+++ b/src/about.njk
@@ -16,15 +16,15 @@
 #}
 
 <!-- About Page -->
-<section class="section about">
+<section class="section-1 about">
 
-  <div class="card">
-    <div class="card__body">
+  <div class="card-1">
+    <div class="card-1__body">
       
       <!-- Headline -->
-      <div class="headline headline--extra-large">
-        <h1 class="headline__title">{{ title }}</h1>
-        <p class="headline__description"></p>
+      <div class="headline-1 headline-1--xl">
+        <h1 class="headline-1__title">{{ title }}</h1>
+        <p class="headline-1__description"></p>
       </div>
 
     </div>
