--- a/src/patch-notes/2020-01-15/index.njk
+++ b/src/patch-notes/2020-01-15/index.njk
@@ -10,21 +10,21 @@
 }
 ---
 
-<section class="section">
-  <div class="row">
+<section class="section-1">
+  <div class="row-1">
     <!-- Deck 1 -->
-    <div class="sm-column-4">
+    <div class="sm-column-1--4">
       {% include "_partials/patch-note.njk" %}
     </div>
 
     <!-- Deck 2 -->
-    <div class="sm-column-8">
+    <div class="sm-column-1--8">
 
-      <div class="card">
-        <div class="card__body">
+      <div class="card-1">
+        <div class="card-1__body">
 
           <!-- Headline -->
-          <div class="headline">
+          <div class="headline-1">
             <h1>{{ title }}</h1>
             <p>{{ date | humanReadableFormat }}</p>
           </div>
