--- a/src/documentation.njk
+++ b/src/documentation.njk
@@ -16,15 +16,15 @@
 #}
 
 <!-- Documentation Page -->
-<section class="section documentation">
+<section class="section-1 documentation">
 
-  <div class="card">
-    <div class="card__body">
+  <div class="card-1">
+    <div class="card-1__body">
 
       <!-- Headline -->
-      <div class="headline headline--extra-large">
-        <h1 class="headline__title">{{ title }}</h1>
-        <p class="headline__description"></p>
+      <div class="headline-1 headline-1--xl">
+        <h1 class="headline-1__title">{{ title }}</h1>
+        <p class="headline-1__description"></p>
       </div>
 
     </div>
