--- a/src/exceptions/404.njk
+++ b/src/exceptions/404.njk
@@ -14,22 +14,22 @@
   Initial author: Damien Bayes <damien.bayes.db@gmail.com>
 #}
 
-<section class="section page-not-found">
-  
+<section class="section-1 page-not-found">
+
   <!-- Deck 1 -->
-  <div class="row">
+  <div class="row-1">
 
     <!-- Subdeck 1 -->
-    <div class="sm-column-6 sm-order-1 order-2">
+    <div class="sm-column-1--6 sm-order-1--1 order-1--2">
       <div class="page-not-found__content">
         <h1>{{ title }}</h1>
         <p>The requested resource could not be found but may be available in the future</p>
-        <a class="button button--primary button--rounded" style="display: block;" href="{{ '/' | url }}">Go Home</a>
+        <a class="button-1 button-1--primary button-1--rounded" href="{{ '/' | url }}">Go Home</a>
       </div>
     </div>
 
     <!-- Subdeck 2 -->
-    <div class="sm-column-6 sm-order-2 order-1">
+    <div class="sm-column-1--6 sm-order-1--2 order-1--1">
       <div class="page-not-found__image">
         <img src="{{ '/' | url }}images/page-not-found.svg" alt="{{ app.name }}"/>
       </div>
