--- a/src/index.njk
+++ b/src/index.njk
@@ -18,52 +18,55 @@
 #}
 
 <!-- Home Page -->
-<section class="section home">
-  <!-- Deck 1 -->
-  <div class="card">
-    <div class="card__body">
+<section class="section-1 home">
 
-      <div class="row">
+  <!-- Deck 1 -->
+  <div class="card-1">
+    <div class="card-1__body">
+      <div class="row-1">
         
         <!-- Subdeck 1 -->
-        <div class="sm-column-6">
+        <div class="sm-column-1--6">
           <div class="home__brand">
             <img src="{{ '/' | url }}images/vacuum.svg" alt="{{ app.name }}"/>  
-            <p><span class="badge badge--extra-small badge--primary">Built for developers</span> in order to make technology open to the world</p>
+            <p><span class="badge-1 badge-1--extra-small badge-1--primary">Built for developers</span> in order to make technology open to the world</p>
           </div>
         </div>
 
         <!-- Subdeck 2 -->
-        <div class="sm-column-6">
+        <div class="sm-column-1--6">
 
           <!-- Headline -->
-          <div class="headline headline--extra-large">
-            <h1 class="headline__title">{{ app.name }}<span class="badge badge--alternative badge--rounded ml-3">{{ app.version }}</span></h1>
-            <p class="headline__description">{{ app.description }}</p>
+          <div class="headline-1 headline-1--xl">
+            <h1 class="headline-1__title">{{ app.name }}<span class="badge-1 badge-1--alternative badge-1--rounded ml-1--3">{{ app.version }}</span></h1>
+            <p class="headline-1__description">{{ app.description }}</p>
           </div>
 
           <!-- Button collection -->
-          <div class="button-collection button-collection--left-aligned">
-            <a href="/documentation" class="button button--outlined-primary button--rounded mr-2 button--small"><span class="icon icon--get-started"></span>{{ translation[app.locale].documentation | capitalize }}</a>
+          <div class="button-collection-1 button-collection-1--left-aligned">
+            <a href="/documentation" class="button-1 button-1--outlined-primary button-1--rounded button-1--small mr-1--2 mb-1--2"><span class="icon icon--get-started"></span>{{ translation[app.locale].documentation | capitalize }}</a>
 
             <!-- WARNING: External link (All external links tend to open in new windows or browser tabs) -->
-            <a href="https://github.com/damien-bayes/baythium-packer_client" target="_blank" rel="noopener noreferrer" class="button button--outlined-primary button--rounded button--small mr-2"><span class="icon icon--github"></span>{{ translation[app.locale].github | capitalize }}<span class="icon icon--external-link"></span></a>
+            <a href="https://github.com/damien-bayes/baythium-packer_client" target="_blank" rel="noopener noreferrer" class="button-1 button-1--outlined-primary button-1--rounded button-1--small mr-1--2 mb-1--2"><span class="icon icon--github"></span>{{ translation[app.locale].github | capitalize }}<span class="icon icon--external-link"></span></a>
 
-            <a href="javascript:" target="_blank" class="button button--primary button--rounded button--small"><span class="icon icon--download"></span>{{ translation[app.locale].download | capitalize }}</a>
+            <a href="javascript:" target="_blank" class="button-1 button-1--primary button-1--rounded button-1--small mb-1--2"><span class="icon icon--download"></span>{{ translation[app.locale].download | capitalize }}</a>
           </div>
 
         </div>
+        
       </div> 
     </div>
   </div>
 
   <!-- Deck 2 -->
-  <div class="card">
-    <div class="card__body">
-      <div class="headline headline--normal">
-        <h2 class="headline__title">Features</h2>
-        <p class="headline__description">We do the work and you stay focused on the big picture</p>
+  <div class="card-1">
+    <div class="card-1__body">
+
+      <div class="headline-1 headline-1--md">
+        <h2 class="headline-1__title">Features</h2>
+        <p class="headline-1__description">We do the work and you stay focused on the big picture</p>
       </div>
+
     </div>
   </div>
 
