--- a/src/styles/components/language-switcher.scss
+++ b/src/styles/components/language-switcher.scss
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: $base-indent;
 
   span {
     margin-right: $sm-indent;
