--- a/src/styles/custom-baythium-aspectus.scss
+++ b/src/styles/custom-baythium-aspectus.scss
@@ -15,14 +15,12 @@
 @import "components/navigation";
 @import "components/language-switcher";
 @import "components/faq";
-@import "components/card";
-@import "components/alert";
 
 /* CUSTOM MODIFICATIONS */
 
 /* PAGES */
 .page-not-found {
-  & .row {
+  & .row-1 {
     display: flex;
     align-items: center;
     text-align: center;
@@ -30,7 +28,7 @@
 
   &__image {
     img {
-      max-width: 512px;
+      max-width: 75%;
       height: auto;
     }
   }
