Fill some pages with a content

--- a/src/contact.njk
+++ b/src/contact.njk
@@ -27,6 +27,9 @@
         <p class="headline-1__description"></p>
       </div>
 
+      <h4>Bug Fixes</h4>
+      <p>If you have some problems or proposals, please <a rel="noopener noreferrer" target="_blank" href="https://github.com/damien-bayes/baythium-packer_client/issues">open an issue<span class="icon icon--external-link"></span></a> including a log error and we will try to fix it as soon as possible in accordance with the project priorities.</p>
+
     </div>
   </div>
 
