--- a/src/contribution.njk
+++ b/src/contribution.njk
@@ -27,6 +27,12 @@
         <p class="headline-1__description"></p>
       </div>
 
+      <p>All appropriate code contributions including those of people having commit access <b>MUST</b> go through a pull request and be approved by a core developer before being merged. This allows us to ensure proper review of all the code.</p>
+      <p>So, fork the project, create a feature branch and send us a pull request.</p>
+
+      <p>In any case, we appreciate any assistance because without you and the open source community this project <b>WOULD NOT</b> be possible.</p>
+      <p>Before you get started, please familiarize yourself with the project and its demanding standards.</p>
+
     </div>
   </div>
 
