--- a/src/index.njk
+++ b/src/index.njk
@@ -26,7 +26,7 @@
       <div class="row-1">
         
         <!-- Subdeck 1 -->
-        <div class="sm-column-1--6">
+        <div class="sm-column-1--6 sm-order-1--2 order-1--1">
           <div class="home__brand">
             <img src="{{ '/' | url }}images/vacuum.svg" alt="{{ app.name }}"/>  
             <p><b>Built for developers</b> in order to make technology open to the world</p>
@@ -34,7 +34,7 @@
         </div>
 
         <!-- Subdeck 2 -->
-        <div class="sm-column-1--6">
+        <div class="sm-column-1--6 sm-order-1--1 order-1--2">
 
           <!-- Headline -->
           <div class="headline-1 headline-1--xl">
@@ -92,6 +92,18 @@
   </div>
 
   <!-- Deck 3 -->
-  {# Banner: Join us on Github #}
+  <div class="card-1 home__github-banner">
+    <div class="card-1__body">
+      <div class="row-1">
+        <div class="sm-column-1--4 mb-1--4">
+          <a href="https://github.com/damien-bayes/baythium-packer_client" target="_blank" rel="noopener noreferrer" class="button-1 button-1--secondary">Join Us On Github</a>
+        </div>
+        <div class="sm-column-1--8">
+          <h3>Let's build the future of the web, together</h3>
+          <p>As you know, Github is the best place to share code with friends, co-workers and complete strangers so join our team today and start collaborating</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </section>
