--- a/src/styles/custom-baythium-aspectus.scss
+++ b/src/styles/custom-baythium-aspectus.scss
@@ -24,6 +24,10 @@
   vertical-align: middle;
 }
 
+.card-1__body {
+  border: none !important;
+}
+
 /* PAGES */
 .page-not-found {
   & .row-1 {
@@ -81,6 +85,37 @@
       object-fit: contain;
       z-index: -1;
       opacity: .25;
+    }
+  }
+
+  &__github-banner {
+    background-color: $primary;
+    overflow: hidden;
+    z-index: 0;
+    padding: $xl-indent;
+
+    .row-1 {
+      display: flex;
+      align-items: center;
+      color: $white;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 256px;
+      height: 256px;
+      background: url("/images/github.svg") 0 0 no-repeat; 
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      object-fit: contain;
+      z-index: -1;
+      opacity: .05;
+      filter: invert(1);
     }
   }
 }
