--- a/src/index.njk
+++ b/src/index.njk
@@ -95,8 +95,9 @@
   <div class="card-1 home__github-banner">
     <div class="card-1__body">
       <div class="row-1">
-        <div class="sm-column-1--4 mb-1--4">
-          <a href="https://github.com/damien-bayes/baythium-packer_client" target="_blank" rel="noopener noreferrer" class="button-1 button-1--secondary">Join Us On Github</a>
+        <div class="sm-column-1--4 text-1--center">
+          <a href="https://github.com/damien-bayes/baythium-packer_client" target="_blank" rel="noopener noreferrer" class="button-1 button-1--secondary mb-1--2">Join Us On Github<span class="icon icon--external-link"></span></a>
+          <p>Stars: <span id="starsCount">0</span></p>
         </div>
         <div class="sm-column-1--8">
           <h3>Let's build the future of the web, together</h3>
