--- a/src/_includes/_partials/app-header.njk
+++ b/src/_includes/_partials/app-header.njk
@@ -28,7 +28,7 @@
       <div class="row-1">
         <div class="column-1--6">
           <a href="javascript:">{{ translation[app.locale].ecosystem | title }}</a>
-          <a href="javascript:">{{ translation[app.locale].supportCenter | title }}</a>
+          <a href="https://support.baythium.com">{{ translation[app.locale].supportCenter | title }}</a>
         </div>
 
         <div class="column-1--6" style="text-align: right;">
