--- a/src/_includes/_partials/app-header.njk
+++ b/src/_includes/_partials/app-header.njk
@@ -33,7 +33,7 @@
 
         <div class="column-1--6" style="text-align: right;">
           <a href="https://auth.baythium.com/sign-up">{{ translation[app.locale].signUp | title }}</a>
-          <a href="https://auth.baythium.com/authorize?client_id=10033&redirect_uri=https://packer.baythium.com/callback&scope=4&response_type=code&state=BrcH0DStb0x35sBrhNID8qXm5SnQdYoIFz1iHfDS">{{ translation[app.locale].signIn | title }}</a>
+          <a href="https://auth.baythium.com/authorize?client_id=10033&redirect_uri=https://packer.baythium.com/callback&scope=4&response_type=code&state=BrcH0DStb0x35sBrhNID8qXm5SnQdYoIFz1iHfDS&locale=en">{{ translation[app.locale].signIn | title }}</a>
         </div>
       </div>
     </div>
