--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -66,7 +66,8 @@ description: "Large-scale and secure folder and file archiver for automating you
     <link rel="canonical" href="{{ app.url }}"/>
     <link rel="dns-prefetch" href="{{ app.url }}"/>
 
-    <link rel="icon" href="/favicon.ico"/>
+    <!-- <link rel="icon" href="/favicon.ico"/> -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
     <link href="/styles/baythium-aspectus.min.css" rel="stylesheet" media="all"/>
     <link href="/styles/baythium-vector.min.css" rel="stylesheet" media="all"/>
