--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -66,6 +66,7 @@ description: "Large-scale and secure folder and file archiver for automating you
     <link rel="canonical" href="{{ app.url }}"/>
     <link rel="dns-prefetch" href="{{ app.url }}"/>
 
+    {# Mark a web page with a shortcut icon in the browser’s tab area #}
     <!-- <link rel="icon" href="/favicon.ico"/> -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
