--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -66,7 +66,11 @@ description: "Large-scale and secure folder and file archiver for automating you
     <link rel="canonical" href="{{ app.url }}"/>
     <link rel="dns-prefetch" href="{{ app.url }}"/>
 
-    {# Mark a web page with a shortcut icon in the browser’s tab area #}
+    {# 
+      Mark a web page with a shortcut icon in the browser’s tab area
+ 
+      NOTE: For shortcut icons, the W3C recommends using a GIF or PNG file with dimensions of 16 × 16 pixels or 32 × 32 pixels
+    #}
     <!-- <link rel="icon" href="/favicon.ico"/> -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
