--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -70,6 +70,9 @@ description: "Large-scale and secure folder and file archiver for automating you
     <link rel="dns-prefetch" href="{{ app.supportUrl }}"/>
     <link rel="dns-prefetch" href="{{ app.authUrl }}"/>
 
+    {# NOTE: Start prefetching cacheable resources #}
+    <link rel="prefetch" href="{{ app.url }}/images/network-lines.svg"/>
+
     {# 
       Mark a web page with a shortcut icon in the browser’s tab area
  
