--- a/src/robots.txt.njk
+++ b/src/robots.txt.njk
@@ -10,5 +10,9 @@
   @see: http://www.robotstxt.org/robotstxt.html 
 #}
 User-agent: *
-Disallow:
+Disallow: /images/
+Disallow: /exceptions/
+Disallow: /fonts/
+Disallow: /js/
+Disallow: /styles/
 Sitemap: {{ app.url }}/sitemap.xml
