--- a/src/contact.njk
+++ b/src/contact.njk
@@ -3,7 +3,9 @@
   layout: "_layouts/base.njk",
   title: "Contact",
   changeFrequency: "yearly",
-  priority: 0.5
+  priority: 0.5,
+  translationKey: "contact",
+  locale: "en"
 }
 ---
 
