--- a/src/contribution.njk
+++ b/src/contribution.njk
@@ -3,7 +3,9 @@
   layout: "_layouts/base.njk",
   title: "Contribution",
   changeFrequency: "yearly",
-  priority: 0.6
+  priority: 0.6,
+  translationKey: "contribution",
+  locale: "en"
 }
 ---
 
