--- a/src/documentation.njk
+++ b/src/documentation.njk
@@ -3,7 +3,9 @@
   layout: "_layouts/base.njk",
   title: "Documentation",
   changeFrequency: "weekly",
-  priority: 1
+  priority: 1,
+  translationKey: "documentation",
+  locale: "en"
 }
 ---
 
