--- a/src/locale/de/index.njk
+++ b/src/locale/de/index.njk
@@ -5,6 +5,7 @@
   changeFrequency: "monthly",
   priority: 0.8,
   permalink: "/{{ locale }}/index.html",
-  translationKey: "home"
+  translationKey: "home",
+  locale: "de"
 }
 ---
