--- a/src/locale/ru/index.njk
+++ b/src/locale/ru/index.njk
@@ -5,7 +5,8 @@
   changeFrequency: "monthly",
   priority: 0.8,
   permalink: "/{{ locale }}/index.html",
-  translationKey: "home"
+  translationKey: "home",
+  locale: "ru"
 }
 ---
 
