--- a/src/patch-notes/2020-03-22/index.njk
+++ b/src/patch-notes/2020-03-22/index.njk
@@ -7,7 +7,9 @@
   updated: "2020-03-22",
   tags: "patch_notes",
   changeFrequency: "monthly",
-  priority: 1
+  priority: 1,
+  translationKey: "patch-note",
+  locale: "en"
 }
 ---
 
