--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -1,6 +1,7 @@
----
-keywords: "bash, shell, unix, automation, baythium-automation, baythium-ecosystem, archiver, cli, powershell, windows, baythium-family, baythium"
-description: "Large-scale and secure folder and file archiver for automating your infrastructure"
+---js
+{
+  keywords: "bash, shell, unix, automation, baythium-automation, baythium-ecosystem, archiver, cli, powershell, windows, baythium-family, baythium, baythium-packer"
+}
 ---
 
 {# 
@@ -11,83 +12,26 @@ description: "Large-scale and secure folder and file archiver for automating you
   Initial author: Damien Bayes <damien.bayes.db@gmail.com>
 #}
 
-{% set metaDescription = app[locale].description %}
-{% set metaKeywords = app[locale].keyWords %}
-
 <!doctype html>
 
 <html lang="{{ app.locale }}" prefix="og:http://ogp.me/ns#">
-  <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
-    <meta name="copyright" content="{{ app.company.name }}"/>
-    <meta name="robots" content="index, follow"/>
-    <meta name="googlebot" content="all"/>
-    <meta name="google" content="notranslate"/>
-    <meta name="author" content="{{ app.author.name }} <{{ app.author.email }}>"/>
-    <meta name="rating" content="general"/>
-    <meta name="coverage" content="worldwide"/>
-    <meta name="target" content="all"/>
-
-    <!-- Change the color of the header and address bar -->
-    <!-- Chrome, Firefox OS and Opera -->
-    <meta name="theme-color" content="#ffffff"/>
-    <!-- Windows Phone -->
-    <meta name="msapplication-navbutton-color" content="#ffffff"/>
-    <!-- iOS Safari -->
-    <meta name="apple-mobi tps://cdn.optimizely.com/js/11399244737.js"></script>
-
-    <!-- <meta name="monetization" content="$pay.stronghold.co/1a155e3a09e210742be8c38ba7cab4795c4"/> -->
-
-    <!-- Open Graph Protocol for Facebook, Telegram -->
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="{{ app.name }}"/>
-    <meta property="og:site_name" content="{{ app.name }}"/>
-    <meta property="og:description" content="{{ description }}"/>
-    <meta property="og:url" content="{{ app.url }}"/>
-    <!-- <meta property="og:image" content="{{ app.image }}"/> -->
-
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:site" content="{{ app.url }}"/>
-    <meta name="twitter:title" content="{{ app.name }}"/>
-    <meta name="twitter:description" content="{{ description }}"/>
-    <!-- <meta name="twitter:image" content="{{ app.image }}"/> -->
-
-    <title>{{ title }} - {{ app.name }}</title>
-
-    <meta name="keywords" content="{{ keywords }}"/>
-    <meta name="description" content="{{ description }}"/>
-
-    {# WARNING: Link resources with a high priority MUST go first #}
-    <link rel="canonical" href="{{ app.url }}"/>
-
-    {# NOTE: DNS prefetching helps to decrease waiting time for visitors because the browser performs DNS lookups before it sends a request for resources located on other domains #}
-    <link rel="dns-prefetch" href="{{ app.url }}"/>
-    <link rel="dns-prefetch" href="{{ app.supportUrl }}"/>
-    <link rel="dns-prefetch" href="{{ app.authUrl }}"/>
-
-    {# NOTE: Start prefetching cacheable resources #}
-    <link rel="prefetch" href="{{ app.url }}/images/network-lines.svg"/>
-
-    {# 
-      Mark a web page with a shortcut icon in the browser’s tab area
- 
-      NOTE: For shortcut icons, the W3C recommends using a GIF or PNG file with dimensions of 16 × 16 pixels or 32 × 32 pixels
-    #}
-    <!-- <link rel="icon" href="/favicon.ico"/> -->
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-
-    <link href="/styles/baythium-aspectus.min.css" rel="stylesheet" media="all"/>
-    <link href="/styles/baythium-vector.min.css" rel="stylesheet" media="all"/>
-
-    <link href="/styles/custom-baythium-aspectus.min.css" rel="stylesheet" media="all"/>
-  </head>
+  {% include "_partials/head.njk" %}
 
   <body id="app" class="baythium-aspectus baythium-aspectus--light no-js">
+    {# Alert #}
+    {%- if app.environment == "development" %}
+    <div class="alert-1 alert-1--danger">
+      <div class="alert-1__header">
+        <div>{{ translation[app.locale].warning }}</div>
+        <div class="alert-1__close-button">&times;</div>
+      </div>
+      <div class="alert-1__body">
+        <p><b class="mr-1--2">{{ translation[app.locale].websiteMode | title }}:</b><span>{{ app.environment }}</span></p>
+        <p><b class="mr-1--2">{{ translation[app.locale].currentPage | title }}:</b><span>{{ page.url | url }}</span></p>
+      </div>
+    </div>
+    {%- endif %}
+
     {% include "_partials/app-header.njk" %}
     <main class="container-1">
       {# "Dynamic" content goes here #}
@@ -99,7 +43,8 @@ description: "Large-scale and secure folder and file archiver for automating you
       <strong>{{ translation[app.locale].noJs }}</strong>
     </noscript>
 
-    <script src="/js/baythium-aspectus.min.js"></script>
+    {# THIRD-PARTY IMPORTS #}
+    <!-- <script src="https://cdn.optimizely.com/js/6721bcf5-449a-48f1-80c9-2627acf496ee.js"></script> -->
     <!--
       Global site tag (gtag.js) - Google Analytics
 
@@ -107,13 +52,24 @@ description: "Large-scale and secure folder and file archiver for automating you
     -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163071822-1"></script>
 
-    <!-- 1. Capture the javascript content as a nunjucks variable -->
+    {# CUSTOM IMPORTS #}
+    <script src="/js/baythium-aspectus.min.js"></script>
+
+    {% if javascripts %}
+      {% for javascript in javascripts %}
+        <script src="{{ javascript }}"></script>
+      {% endfor %}
+    {% endif %}
+
+        <!-- 1. Capture the javascript content as a nunjucks variable -->
     {% set js %}
       {% include "_js/global.js" %}
     {% endset %}
     <!-- 2. Feed it through minifyJs filter to minify content -->
-    <script>
-      {{ js | minifyJs | safe }}
-    </script>
+    {% if app.environment == "development" %}
+      <script>{{ js | minifyJs | safe }}</script>
+    {% else %}
+      <script>{{ js | safe }}</script>
+    {% endif %}
   </body>
 </html>
