--- a/src/_includes/_partials/app-header.njk
+++ b/src/_includes/_partials/app-header.njk
@@ -6,20 +6,6 @@
   Initial author: Damien Bayes <damien.bayes.db@gmail.com>
 #}
 
-{# Alert #}
-{%- if app.environment == "development" %}
-<div class="alert-1 alert-1--danger">
-  <div class="alert-1__header">
-    <div>{{ translation[app.locale].warning }}</div>
-    <div class="alert-1__close-button">&times;</div>
-  </div>
-  <div class="alert-1__body">
-    <p><b class="mr-1--2">{{ translation[app.locale].websiteMode | title }}:</b><span>{{ app.environment }}</span></p>
-    <p><b class="mr-1--2">{{ translation[app.locale].currentPage | title }}:</b><span>{{ page.url | url }}</span></p>
-  </div>
-</div>
-{%- endif %}
-
 <header class="app-header">
   <div class="container-1">
 
@@ -77,7 +63,7 @@
             {%- set url = navigation.url %}
 
             <li class="navigation__item" data-navigation-id="{{ id }}">
-              <a class="navigation__link" href="{{ url }}">{{ name | title }}</a>
+              <a {% if page.url == url %} class="navigation__link navigation__link--active" {% else %} class="navigation__link" {% endif %} href="{{ url }}">{{ name | title }}</a>
             </li>
 
           {% if loop.last %}</ul>{% endif %}
