--- a/src/about.njk
+++ b/src/about.njk
@@ -3,7 +3,9 @@
   layout: "_layouts/base.njk",
   title: "About",
   changeFrequency: "yearly",
-  priority: 0.6
+  priority: 0.6,
+  translationKey: "about",
+  locale: "en"
 }
 ---
 
