--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,10 @@
   changeFrequency: "monthly",
   priority: 0.8,
   translationKey: "home",
-  locale: "en"
+  locale: "en",
+  description: "Large-scale and secure folder and file archiver for automating your infrastructure",
+  stylesheets: [],
+  javascripts: ["/js/baythium-stargazer.js"]
 }
 ---
 
@@ -95,14 +98,19 @@
   <div class="card-1 home__github-banner">
     <div class="card-1__body">
       <div class="row-1">
+
+        <!-- Subdeck 1 -->
         <div class="sm-column-1--4 text-1--center">
           <a href="https://github.com/damien-bayes/baythium-packer_client" target="_blank" rel="noopener noreferrer" class="button-1 button-1--secondary mb-1--2">Join Us On Github<span class="icon icon--external-link"></span></a>
           <p>Stars: <span id="starsCount">0</span></p>
         </div>
+
+        <!-- Subdeck 2 -->
         <div class="sm-column-1--8">
           <h3>Let's build the future of the web, together</h3>
           <p>As you know, Github is the best place to share code with friends, co-workers and complete strangers so join our team today and start collaborating</p>
         </div>
+
       </div>
     </div>
   </div>
