--- a/src/patch-notes/2020-03-19/index.njk
+++ b/src/patch-notes/2020-03-19/index.njk
@@ -6,7 +6,9 @@
   date: "2020-03-19",
   tags: "patch_notes",
   changeFrequency: "monthly",
-  priority: 1
+  priority: 1,
+  translationKey: "patch-note",
+  locale: "en"
 }
 ---
 
