--- a/src/styles/custom-baythium-aspectus.scss
+++ b/src/styles/custom-baythium-aspectus.scss
@@ -15,6 +15,7 @@
 @import "components/navigation";
 @import "components/language-switcher";
 @import "components/faq";
+@import "components/pagination";
 
 /* CUSTOM MODIFICATIONS */
 .icon { 
@@ -22,10 +23,6 @@
   margin-left: 4px;
   margin-bottom: 0;
   vertical-align: middle;
-}
-
-.card-1__body {
-  border: none !important;
 }
 
 /* PAGES */
