--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -43,7 +43,7 @@
     <!--
     <div class="gdpr">
       <p>This site uses cookies to improve our services. By using this site, you agree to our <a href="{{ app.policyUrl }}" title="Privacy Policy">privacy policies</a>
-        <button class="button button-primary button-border is-small" title="Close" id="close-gdpr">Accept</button>
+        <button class="button button--primary" title="Close">Accept</button>
       </p>
     </div>
     -->
