--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -42,8 +42,9 @@
     {# GDPR #}
     <!--
     <div class="gdpr">
-      <p>This site uses cookies to improve our services. By using this site, you agree to our <a href="{{ app.policyUrl }}" title="Privacy Policy">privacy policies</a>
-        <button class="button button--primary" title="Close">Accept</button>
+      <p>
+        This site uses cookies to improve our services. By using this site, you agree to our <a href="{{ app.policyUrl }}" title="Privacy Policy">privacy policies</a>
+        <button class="button-1 button-1--primary" title="Close">Accept</button>
       </p>
     </div>
     -->
