--- a/src/_includes/_partials/head.njk
+++ b/src/_includes/_partials/head.njk
@@ -20,6 +20,7 @@
   <meta name="rating" content="general"/>
   <meta name="coverage" content="worldwide"/>
   <meta name="target" content="all"/>
+  <meta name="revisit-after" content="7 days"/>
 
   <!-- Change the color of the header and address bar -->
   <!-- Chrome, Firefox OS and Opera -->
